[package]
name = "gosub-engine"
version = "0.1.0"
edition = "2021"
authors = ["Mishy8er69"]

description =false
license = 	"CC-BY-NC-2.5"
repository = "https://github.com/jaytaph/gosub-browser"
readme = "README.MD"
keywords = ["html5", "parser"]

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
derive_more = "0.99"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
lazy_static = "1.4"
typed-arena = "2.0.2"
